--- a/app/src/main/res/layout/drawer_search.xml
+++ b/app/src/main/res/layout/drawer_search.xml
@@ -6,5 +6,6 @@
     android:padding="4dp"
     android:textSize="20dp"
     android:textColor="#000000"
+    android:singleLine="true"
     android:hint="Search"
     android:background="#ffff80"/>
