--- a/app/src/main/res/layout/topcategory.xml
+++ b/app/src/main/res/layout/topcategory.xml
@@ -5,9 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="right"
-        android:textSize="20dp"
-        android:text="Top Category"/>
+        android:textSize="20dp"/>
 </LinearLayout>
