--- a/app/src/main/res/layout/drawer_search.xml
+++ b/app/src/main/res/layout/drawer_search.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <EditText xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="4dp"
-    android:textSize="20dp"
-    android:textColor="#000000"
-    android:singleLine="true"
-    android:hint="Search"
-    android:background="#ffff80"/>
+    android:id="@+id/search"
+    style="@style/DrawerSearch"
+    android:hint="@string/search_hint"/>
