--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -14,4 +14,13 @@
         android:layout_gravity="start"
         android:choiceMode="singleChoice"
         android:background="#ff0000"/>
+    <TextView
+        android:id="@+id/checkout"
+        style="@style/DrawerItem"
+        android:layout_width="200dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="end"
+        android:padding="4dp"
+        android:text="@string/your_cart"
+        android:background="#ffff00"/>
 </android.support.v4.widget.DrawerLayout>
