--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,24 @@
 <resources>
-
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
     </style>
-
+    <style name="DrawerItem">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingLeft">18dp</item>
+        <item name="android:paddingRight">4dp</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:paddingBottom">4dp</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:background">#ffffff</item>
+    </style>
+    <style name="DrawerSearch" parent="DrawerItem">
+        <item name="android:padding">4dp</item>
+        <item name="android:background">#ffff80</item>
+    </style>
+    <style name="DrawerHeader" parent="DrawerItem">
+        <item name="android:padding">2dp</item>
+        <item name="android:textSize">14dp</item>
+        <item name="android:background">#cccccc</item>
+    </style>
 </resources>
