--- a/app/src/main/res/layout/charlie.xml
+++ b/app/src/main/res/layout/charlie.xml
@@ -7,7 +7,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="right"
+        android:gravity="center_horizontal"
         android:textSize="20dp"
         android:text="@string/charlie_title"/>
 </LinearLayout>
