--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/drawer"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <FrameLayout
@@ -8,19 +8,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
     <ListView
-        android:id="@+id/navigate"
-        android:layout_width="200dp"
+        android:id="@+id/left_drawer"
+        android:layout_width="180dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:choiceMode="singleChoice"
         android:background="#ff0000"/>
-    <TextView
-        android:id="@+id/checkout"
-        style="@style/DrawerItem"
-        android:layout_width="200dp"
+    <LinearLayout
+        android:id="@+id/right_drawer"
+        android:layout_width="180dp"
         android:layout_height="match_parent"
-        android:layout_gravity="end"
-        android:padding="4dp"
-        android:text="@string/your_cart"
-        android:background="#ffff00"/>
+        android:orientation="vertical"
+        android:layout_gravity="end">
+        <TextView
+            android:id="@+id/checkout"
+            style="@style/CartHeader"
+            android:text="@string/your_cart"
+            android:background="#ffff00"/>
+        <ListView
+            android:id="@+id/cart_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:choiceMode="singleChoice"
+            android:background="#ff0000"/>
+    </LinearLayout>
 </android.support.v4.widget.DrawerLayout>
