--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,24 +1,32 @@
 <resources>
     <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
     </style>
-    <style name="DrawerItem">
+    <!-- Main screen drawer graphics -->
+    <style name="DrawerStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:paddingLeft">18dp</item>
-        <item name="android:paddingRight">4dp</item>
-        <item name="android:paddingTop">4dp</item>
-        <item name="android:paddingBottom">4dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:padding">4dp</item>
         <item name="android:textSize">18dp</item>
         <item name="android:textColor">#000000</item>
         <item name="android:background">#ffffff</item>
     </style>
-    <style name="DrawerSearch" parent="DrawerItem">
+    <style name="DrawerSearch" parent="DrawerStyle">
         <item name="android:padding">4dp</item>
         <item name="android:background">#ffff80</item>
     </style>
-    <style name="DrawerHeader" parent="DrawerItem">
+    <style name="DrawerHeader" parent="DrawerStyle">
         <item name="android:padding">2dp</item>
         <item name="android:textSize">14dp</item>
         <item name="android:background">#cccccc</item>
+    </style>
+    <style name="DrawerItem" parent="DrawerStyle">
+        <item name="android:paddingLeft">18dp</item>
+        <item name="android:paddingRight">4dp</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:paddingBottom">4dp</item>
+    </style>
+    <style name="CartHeader" parent="DrawerItem">
+        <item name="android:background">#ffff80</item>
     </style>
 </resources>
