--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -11,6 +11,7 @@
         android:id="@+id/left_drawer"
         android:layout_width="180dp"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         android:layout_gravity="start"
         android:choiceMode="singleChoice"
         android:background="#ff0000"/>
@@ -28,7 +29,8 @@
         <ListView
             android:id="@+id/cart_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="100dp"
+            android:layout_weight="1"
             android:layout_gravity="start"
             android:choiceMode="singleChoice"
             android:background="#ff0000"/>
