--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,6 @@
     <style name="DrawerStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_weight">1</item>
         <item name="android:padding">4dp</item>
         <item name="android:textSize">18dp</item>
         <item name="android:textColor">#000000</item>
@@ -26,7 +25,7 @@
         <item name="android:paddingTop">4dp</item>
         <item name="android:paddingBottom">4dp</item>
     </style>
-    <style name="CartHeader" parent="DrawerItem">
+    <style name="CartHeader" parent="DrawerStyle">
         <item name="android:background">#ffff80</item>
     </style>
 </resources>
