--- a/app/src/main/res/layout/action_bar.xml
+++ b/app/src/main/res/layout/action_bar.xml
@@ -11,46 +11,27 @@
         android:src="@drawable/ic_drawer"
         android:scaleType="center"
         android:background="#ff0000"/>
-    <FrameLayout
-        android:id="@+id/middle_frame"
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <TextView
-                android:id="@+id/action_staples"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="20dp"
-                android:textColor="#000000"
-                android:background="#ffff80"
-                android:text="Staples"/>
-            <com.staples.drawertest.SquareButton
-                android:id="@+id/action_search"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_action_search"
-                android:scaleType="center"
-                android:background="#ffff80"/>
-        </LinearLayout>
-        <EditText
-            android:id="@+id/search_text"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/action_staples"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:visibility="invisible"
-            android:padding="2dp"
-            android:singleLine="true"
-            android:inputType="text"
-            android:cursorVisible="true"
-            android:imeOptions="actionSearch"
-            android:hint="Search"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textSize="20dp"
             android:textColor="#000000"
-            android:background="#80ffff"/>
-    </FrameLayout>
+            android:background="#ffff80"
+            android:text="Staples"/>
+        <SearchView
+            android:id="@+id/search_text"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:maxWidth="200dp"
+            android:imeOptions="actionSearch|flagNoExtractUi"/>
+    </LinearLayout>-->
     <com.staples.drawertest.SquareButton
         android:id="@+id/action_right_drawer"
         android:layout_width="wrap_content"
