--- a/app/src/main/res/layout/category.xml
+++ b/app/src/main/res/layout/category.xml
@@ -16,4 +16,12 @@
         android:layout_gravity="start"
         android:choiceMode="singleChoice"
         android:background="#ff0000"/>
+    <TextView
+        android:id="@+id/empty"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:visibility="gone"
+        android:textSize="20dp"
+        android:text="@string/empty"/>
 </LinearLayout>
