--- a/app/src/main/res/layout/category.xml
+++ b/app/src/main/res/layout/category.xml
@@ -9,14 +9,21 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:textSize="20dp"/>
-    <com.staples.drawertest.NothingFound
+    <com.staples.drawertest.StatusLayout
         android:id="@+id/empty"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:visibility="gone"
-        android:textSize="20dp"
-        android:text="@string/empty"/>
+        android:layout_height="wrap_content">
+        <ProgressBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:visibility="gone"
+            android:textSize="20dp"
+           android:text="@string/empty"/>
+    </com.staples.drawertest.StatusLayout>
     <ListView
         android:id="@+id/categories"
         android:layout_width="match_parent"
