Add 3 part StatusLayout

--- a/app/src/main/res/layout/category.xml
+++ b/app/src/main/res/layout/category.xml
@@ -10,25 +10,31 @@
         android:gravity="center_horizontal"
         android:textSize="20dp"/>
     <com.staples.drawertest.StatusLayout
-        android:id="@+id/empty"
+        android:id="@+id/status_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ProgressBar
+        android:layout_height="match_parent">
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent">
+            <ProgressBar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"/>
+        </FrameLayout>
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
+            android:layout_height="match_parent"
+            android:gravity="center"
             android:visibility="gone"
             android:textSize="20dp"
-           android:text="@string/empty"/>
+            android:text="@string/empty"/>
+        <ListView
+            android:id="@+id/categories"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:visibility="gone"
+            android:choiceMode="singleChoice"
+            android:background="#ff0000"/>
     </com.staples.drawertest.StatusLayout>
-    <ListView
-        android:id="@+id/categories"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:choiceMode="singleChoice"
-        android:background="#ff0000"/>
 </LinearLayout>
