--- a/app/src/main/res/layout/category.xml
+++ b/app/src/main/res/layout/category.xml
@@ -9,18 +9,15 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:textSize="20dp"/>
-    <com.staples.drawertest.StatusLayout
+    <com.staples.drawertest.widget.ListViewWrapper
         android:id="@+id/status_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <ProgressBar
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"/>
-        </FrameLayout>
+        android:layout_height="match_parent"
+        android:layout_gravity="center">
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -36,5 +33,5 @@
             android:visibility="gone"
             android:choiceMode="singleChoice"
             android:background="#ff0000"/>
-    </com.staples.drawertest.StatusLayout>
+    </com.staples.drawertest.widget.ListViewWrapper>
 </LinearLayout>
