Add FragmentTransaction animation, requires widget.AnimatorLayout

--- a/app/src/main/res/layout/category.xml
+++ b/app/src/main/res/layout/category.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.staples.drawertest.widget.AnimatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -34,4 +34,4 @@
             android:choiceMode="singleChoice"
             android:background="#ff0000"/>
     </com.staples.drawertest.widget.ListViewWrapper>
-</LinearLayout>
+</com.staples.drawertest.widget.AnimatorLayout>
