--- a/app/src/main/res/layout/tobedone.xml
+++ b/app/src/main/res/layout/tobedone.xml
@@ -9,5 +9,5 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:textSize="20dp"
-        android:text="@string/bravo_title"/>
+        android:text="@string/tobedone_title"/>
 </LinearLayout>
