--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
     </style>
@@ -10,20 +11,23 @@
         <item name="android:textColor">#000000</item>
         <item name="android:background">#ffffff</item>
     </style>
-    <style name="DrawerSearch" parent="DrawerStyle">
-        <item name="android:padding">4dp</item>
-        <item name="android:background">#ffff80</item>
-    </style>
     <style name="DrawerHeader" parent="DrawerStyle">
         <item name="android:padding">2dp</item>
         <item name="android:textSize">14dp</item>
         <item name="android:background">#cccccc</item>
     </style>
-    <style name="DrawerItem" parent="DrawerStyle">
+    <style name="DrawerFragment" parent="DrawerStyle">
         <item name="android:paddingLeft">18dp</item>
         <item name="android:paddingRight">4dp</item>
         <item name="android:paddingTop">4dp</item>
         <item name="android:paddingBottom">4dp</item>
+    </style>
+    <style name="DrawerCategory" parent="DrawerStyle">
+        <item name="android:paddingLeft">18dp</item>
+        <item name="android:paddingRight">4dp</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:paddingBottom">4dp</item>
+        <item name="android:textColor">@color/drawer_text</item>
     </style>
     <style name="CartHeader" parent="DrawerStyle">
         <item name="android:background">#ffff80</item>
