--- a/app/src/main/res/layout/tobedone.xml
+++ b/app/src/main/res/layout/tobedone.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.staples.drawertest.widget.AnimatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:textSize="20dp"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:textSize="20dp"
         android:text="@string/tobedone_title"/>
-</LinearLayout>
+</com.staples.drawertest.widget.AnimatorLayout>
