Part 1 of package rename

--- a/app/src/main/res/layout/personal.xml
+++ b/app/src/main/res/layout/personal.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.staples.drawertest.widget.AnimatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.staples.mobile.widget.AnimatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -9,4 +9,4 @@
         android:gravity="center"
         android:text="Hi User!\nThere are amazing offers for you!\nSee them all."
         android:background="#00ff00"/>
-</com.staples.drawertest.widget.AnimatorLayout>
+</com.staples.mobile.widget.AnimatorLayout>
