--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.staples.drawertest.widget.AnimatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.staples.mobile.widget.AnimatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,4 +9,4 @@
         android:layout_height="match_parent"
         android:src="@drawable/staples"
         android:scaleType="center"/>
-</com.staples.drawertest.widget.AnimatorLayout>
+</com.staples.mobile.widget.AnimatorLayout>
