--- a/app/src/main/res/layout/tobedone.xml
+++ b/app/src/main/res/layout/tobedone.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.staples.drawertest.widget.AnimatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.staples.mobile.widget.AnimatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -15,4 +15,4 @@
         android:gravity="center_horizontal"
         android:textSize="20dp"
         android:text="@string/tobedone_title"/>
-</com.staples.drawertest.widget.AnimatorLayout>
+</com.staples.mobile.widget.AnimatorLayout>
