--- a/app/src/main/res/layout/order_track.xml
+++ b/app/src/main/res/layout/order_track.xml
@@ -2,20 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#ffccff">
+    android:layout_height="wrap_content">
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/icon"
+        android:layout_width="@dimen/icon_width"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:gravity="center"
         android:padding="4dp"
-        android:textSize="30dp"
-        android:text="✓"/>
+        android:textSize="30dp"/>
     <TextView
-        android:layout_width="0dp"
+        android:id="@+id/status"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_gravity="center_vertical"
-        android:textSize="14dp"
-        android:text="Your order has been shipped!\n#123456"/>
+        android:layout_gravity="center|left"
+        android:gravity="center|left"
+        android:padding="4dp"
+        android:textSize="14dp"/>
 </LinearLayout>
