--- a/app/src/main/res/layout-port/main.xml
+++ b/app/src/main/res/layout-port/main.xml
@@ -22,20 +22,21 @@
     </LinearLayout>
     <ListView
         android:id="@+id/left_drawer"
-        android:layout_width="180dp"
+        android:layout_width="200dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:layout_gravity="start"
         android:choiceMode="singleChoice"
-        android:background="#ff0000"/>
+        android:background="#ffffff"/>
     <LinearLayout
         android:id="@+id/right_drawer"
-        android:layout_width="180dp"
+        android:layout_width="200dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_gravity="end">
         <TextView
             android:id="@+id/checkout"
+            android:layout_width="match_parent"
             style="@style/CartHeader"
             android:text="@string/your_cart"
             android:background="#ffff00"/>
@@ -46,6 +47,6 @@
             android:layout_weight="1"
             android:layout_gravity="start"
             android:choiceMode="singleChoice"
-            android:background="#ff0000"/>
+            android:background="#ffffff"/>
     </LinearLayout>
 </android.support.v4.widget.DrawerLayout>
