--- a/app/src/main/res/layout/category.xml
+++ b/app/src/main/res/layout/category.xml
@@ -32,6 +32,6 @@
             android:layout_gravity="start"
             android:visibility="gone"
             android:choiceMode="singleChoice"
-            android:background="#ff0000"/>
+            android:background="#ffffff"/>
     </com.staples.mobile.widget.ListViewWrapper>
 </com.staples.mobile.widget.AnimatorLayout>
