--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -6,5 +6,4 @@
     android:layout_height="wrap_content"
     android:padding="4dp"
     android:textSize="16dp"
-    android:textColor="#000000"
-    android:background="#ffffff"/>
+    android:textColor="#000000"/>
