--- a/app/src/main/res/layout/drawer_account.xml
+++ b/app/src/main/res/layout/drawer_account.xml
@@ -3,14 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    style="@style/DrawerStyle">
-    <ImageView
-        android:id="@+id/icon"
-        android:layout_width="wrap_content"
-        style="@style/DrawerStyle"/>
+    android:background="#cccccc">
     <TextView
         android:id="@+id/title"
         android:layout_width="0dp"
         android:layout_weight="1"
         style="@style/DrawerStyle"/>
+    <TextView
+        android:id="@+id/signin"
+        android:layout_width="wrap_content"
+        style="@style/DrawerStyle"
+        android:text="@string/signin_title"
+        android:textColor="#ffffff"/>
 </LinearLayout>
