--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,30 +4,11 @@
     </style>
     <!-- Main screen drawer graphics -->
     <style name="DrawerStyle">
-        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center_vertical</item>
         <item name="android:padding">4dp</item>
         <item name="android:textSize">18dp</item>
         <item name="android:textColor">#000000</item>
-        <item name="android:background">#ffffff</item>
-    </style>
-    <style name="DrawerHeader" parent="DrawerStyle">
-        <item name="android:padding">2dp</item>
-        <item name="android:textSize">14dp</item>
-        <item name="android:background">#cccccc</item>
-    </style>
-    <style name="DrawerFragment" parent="DrawerStyle">
-        <item name="android:paddingLeft">18dp</item>
-        <item name="android:paddingRight">4dp</item>
-        <item name="android:paddingTop">4dp</item>
-        <item name="android:paddingBottom">4dp</item>
-    </style>
-    <style name="DrawerCategory" parent="DrawerStyle">
-        <item name="android:paddingLeft">18dp</item>
-        <item name="android:paddingRight">4dp</item>
-        <item name="android:paddingTop">4dp</item>
-        <item name="android:paddingBottom">4dp</item>
-        <item name="android:textColor">@color/drawer_text</item>
     </style>
     <style name="CartHeader" parent="DrawerStyle">
         <item name="android:background">#ffff80</item>
