--- a/app/src/main/res/layout-port/topper.xml
+++ b/app/src/main/res/layout-port/topper.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
-    <ImageView
-        android:id="@+id/banner"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"/>
-    <ListView
-        android:id="@+id/products"
+        android:text="Your store is Kendall Square"
+        android:background="#ffcccc"/>
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_height="wrap_content"
+        android:text="You have $75 in rewards!"
+        android:background="#ffffcc"/>
 </LinearLayout>
