--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -7,29 +7,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <LinearLayout
+        <FrameLayout
+            android:id="@+id/topper"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="This is the Store"/>
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="This is the Rewards"/>
-        </LinearLayout>
+            android:layout_height="wrap_content"/>
         <FrameLayout
             android:id="@+id/content"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
     </LinearLayout>
     <ListView
         android:id="@+id/left_drawer"
-        android:layout_width="180dp"
+        android:layout_width="200dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:layout_gravity="start"
@@ -37,7 +27,7 @@
         android:background="#ffffff"/>
     <LinearLayout
         android:id="@+id/right_drawer"
-        android:layout_width="180dp"
+        android:layout_width="200dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_gravity="end">
