Add store info & rewards, SKU arg passing not fully functional

--- a/app/src/main/res/layout-land/topper.xml
+++ b/app/src/main/res/layout-land/topper.xml
@@ -4,12 +4,16 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
     <TextView
+        android:id="@+id/store"
+        style="@style/TopperStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Your store is Kendall Square"
         android:background="#ffcccc"/>
     <TextView
+        android:id="@+id/rewards"
+        style="@style/TopperStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
