--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,13 +8,15 @@
     <style name="AppTheme.ActionBar" parent="android:Widget.Holo.Light.ActionBar.Solid">
         <item name="android:displayOptions"></item>
     </style>
-    <!-- Main screen drawer graphics -->
     <style name="DrawerStyle">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center_vertical</item>
         <item name="android:padding">4dp</item>
         <item name="android:textSize">18dp</item>
         <item name="android:textColor">#000000</item>
+    </style>
+    <style name="TopperStyle">
+        <item name="android:textSize">16dp</item>
     </style>
     <style name="CartHeader" parent="DrawerStyle">
         <item name="android:background">#ffff80</item>
