--- a/app/src/main/res/layout/pager_frame.xml
+++ b/app/src/main/res/layout/pager_frame.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.staples.mobile.widget.AnimatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.staples.mobile.cfa.widget.AnimatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -13,4 +13,4 @@
             android:layout_height="wrap_content"
             android:layout_gravity="top"/>
     </android.support.v4.view.ViewPager>
-</com.staples.mobile.widget.AnimatorLayout>
+</com.staples.mobile.cfa.widget.AnimatorLayout>
