--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="AppTheme" parent="android:Theme.Holo.Light">
-        <!--<item name="android:actionBarStyle">@style/AppTheme.ActionBar</item>
-        TODO This is commented out because it breaks Robolectric -->
+        <!--<item name="android:actionBarStyle">@style/AppTheme.ActionBar</item>-->
     </style>
     <!-- Needed to prevent flashing of action bar on startup-->
     <style name="AppTheme.ActionBar" parent="android:Widget.Holo.Light.ActionBar.Solid">
