Add full screen splash with timeout

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="AppTheme" parent="android:Theme.Holo.Light">
-        <!--<item name="android:actionBarStyle">@style/AppTheme.ActionBar</item>-->
-    </style>
-    <!-- Needed to prevent flashing of action bar on startup-->
-    <style name="AppTheme.ActionBar" parent="android:Widget.Holo.Light.ActionBar.Solid">
-        <item name="android:displayOptions"></item>
-    </style>
+    <style name="AppTheme" parent="android:Theme.Holo.Light.NoActionBar"/>
     <style name="DrawerStyle">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center_vertical</item>
