--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,49 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/drawer_layout"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <LinearLayout
+    <!-- Splash screen -->
+    <ImageView
+        android:id="@+id/splash"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-        <FrameLayout
-            android:id="@+id/topper"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <FrameLayout
-            android:id="@+id/content"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
-    </LinearLayout>
-    <ListView
-        android:id="@+id/left_drawer"
-        android:layout_width="200dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:layout_gravity="start"
-        android:choiceMode="singleChoice"
+        android:layout_gravity="center"
+        android:src="@drawable/splash"
         android:background="#ffffff"/>
+    <!-- Main screen -->
     <LinearLayout
-        android:id="@+id/right_drawer"
-        android:layout_width="200dp"
+        android:id="@+id/main"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_gravity="end">
-        <TextView
-            android:id="@+id/checkout"
+        android:visibility="invisible">
+        <!-- ActionBar -->
+        <LinearLayout
+              android:layout_width="match_parent"
+              android:layout_height="@dimen/icon_width"
+              android:orientation="horizontal"
+              android:background="#00ff00">
+            <ImageView
+                android:id="@+id/action_left_drawer"
+                android:layout_width="@dimen/icon_width"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:src="@drawable/ic_drawer"/>
+            <LinearLayout
+                android:id="@+id/website"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:src="@drawable/logo"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:paddingLeft="4dp"
+                    android:paddingRight="4dp"
+                    android:gravity="center"
+                    android:textSize="24dp"
+                    android:text="@string/staples"/>
+            </LinearLayout>
+            <View
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+            <ImageView
+                android:id="@+id/search"
+                android:layout_width="@dimen/icon_width"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:src="@drawable/ic_search"/>
+            <ImageView
+                android:id="@+id/action_right_drawer"
+                android:layout_width="@dimen/icon_width"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:src="@drawable/ic_drawer"/>
+        </LinearLayout>
+        <android.support.v4.widget.DrawerLayout
+            android:id="@+id/drawer_layout"
             android:layout_width="match_parent"
-            style="@style/CartHeader"
-            android:text="@string/your_cart"
-            android:background="#ffff00"/>
-        <ListView
-            android:id="@+id/cart_list"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:layout_gravity="start"
-            android:choiceMode="singleChoice"
-            android:background="#ffffff"/>
+            android:layout_height="match_parent">
+            <!-- Main content -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <FrameLayout
+                    android:id="@+id/topper"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+                <FrameLayout
+                    android:id="@+id/content"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"/>
+            </LinearLayout>
+            <!-- Left drawer (menu) -->
+            <ListView
+                android:id="@+id/left_drawer"
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_gravity="start"
+                android:choiceMode="singleChoice"
+                android:background="#ffffff"/>
+            <!-- Right drawer (shopping cart) -->
+            <LinearLayout
+                android:id="@+id/right_drawer"
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_gravity="end">
+                <TextView
+                    android:id="@+id/checkout"
+                    android:layout_width="match_parent"
+                    style="@style/CartHeader"
+                    android:text="@string/your_cart"
+                    android:background="#ffff00"/>
+                <ListView
+                    android:id="@+id/cart_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="start"
+                    android:choiceMode="singleChoice"
+                    android:background="#ffffff"/>
+            </LinearLayout>
+        </android.support.v4.widget.DrawerLayout>
     </LinearLayout>
-</android.support.v4.widget.DrawerLayout>
+</FrameLayout>
