--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -85,14 +85,35 @@
                     android:layout_weight="1"/>
             </LinearLayout>
             <!-- Left drawer (menu) -->
-            <ListView
+            <com.staples.mobile.cfa.widget.ListViewWrapper
                 android:id="@+id/left_drawer"
                 android:layout_width="200dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
                 android:layout_gravity="start"
-                android:choiceMode="singleChoice"
-                android:background="#ffffff"/>
+                android:orientation="vertical"
+                android:background="#ffffff">
+                <ListView
+                    android:id="@+id/menu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:choiceMode="singleChoice"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center">
+                    <ProgressBar
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:textSize="20dp"
+                    android:text="@string/empty"/>
+            </com.staples.mobile.cfa.widget.ListViewWrapper>
             <!-- Right drawer (shopping cart) -->
             <LinearLayout
                 android:id="@+id/right_drawer"
