Add RatingStars custom view

--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="icon_width">36dp</dimen>
     <dimen name="min_column_width">150dp</dimen>
+    <dimen name="sku_row_height">200dp</dimen>
 </resources>
