--- a/app/src/main/res/layout/bundle_item.xml
+++ b/app/src/main/res/layout/bundle_item.xml
@@ -15,12 +15,10 @@
         android:id="@+id/rating"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-    <TextView
+    <com.staples.mobile.cfa.widget.PriceSticker
         android:id="@+id/price"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="4dp"
-        android:textSize="20dp"/>
+        android:layout_height="wrap_content"/>
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
