Updated as per code review.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,292 +19,10 @@
         <item name="android:background">#ffff80</item>
     </style>
 
-	<style name="ButtonTextBlackNormSize1" parent="@android:style/Widget.Button">
-		<item name="android:textColor">@color/text_black</item>
-		<item name="android:textSize">13sp</item>
-		<item name="android:textStyle">normal</item>
-	</style>
-
-	<style name="ButtonTextBlackBoldSize1" parent="ButtonTextBlackNormSize1">
-		<item name="android:textStyle">bold</item>
-	</style>
-
-	<!-- Button Text Size 2 -->
-
-	<style name="ButtonTextBlackNormSize2" parent="@android:style/Widget.Button">
-		<item name="android:textColor">@color/text_black</item>
+	<style name="TextExtraLargeListItem">
 		<item name="android:textSize">15sp</item>
 		<item name="android:textStyle">normal</item>
-	</style>
-
-	<style name="ButtonTextBlackBoldSize2" parent="ButtonTextBlackNormSize2">
-		<item name="android:textStyle">bold</item>
-	</style>
-
-	<!-- Button Text Size 3 -->
-
-	<style name="ButtonTextBlackNormSize3" parent="@android:style/Widget.Button">
-		<item name="android:textColor">@color/text_black</item>
-		<item name="android:textSize">16sp</item>
-		<item name="android:textStyle">normal</item>
-	</style>
-
-	<style name="ButtonTextBlackBoldSize3" parent="ButtonTextBlackNormSize3">
-		<item name="android:textStyle">bold</item>
-	</style>
-
-	<!-- Text Size 1 -->
-
-	<style name="TextSize1">
-		<item name="android:textSize">12sp</item>
-	</style>
-
-	<style name="TextBlackNormSize1">
-		<item name="android:textColor">@color/text_black</item>
-		<item name="android:textSize">12sp</item>
-		<item name="android:textStyle">normal</item>
-	</style>
-
-	<style name="TextBlackBoldSize1">
-		<item name="android:textColor">@color/text_black</item>
-		<item name="android:textSize">12sp</item>
-		<item name="android:textStyle">bold</item>
-	</style>
-
-	<style name="TextWhiteNormSize1">
-		<item name="android:textColor">@color/text_white</item>
-		<item name="android:textSize">12sp</item>
-		<item name="android:textStyle">normal</item>
-	</style>
-
-	<style name="TextWhiteBoldize1">
-		<item name="android:textColor">@color/text_white</item>
-		<item name="android:textSize">12sp</item>
-		<item name="android:textStyle">bold</item>
-	</style>
-
-	<!-- Text Size 2 -->
-
-	<style name="TextSize2">
-		<item name="android:textSize">13sp</item>
-	</style>
-
-	<style name="TextBoldSize2">
-		<item name="android:textSize">13sp</item>
-		<item name="android:textStyle">bold</item>
-	</style>
-
-	<style name="TextBlackNormSize2">
-		<item name="android:textColor">@color/text_black</item>
-		<item name="android:textSize">13sp</item>
-		<item name="android:textStyle">normal</item>
-	</style>
-
-	<style name="TextBlackBoldSize2">
-		<item name="android:textColor">@color/text_black</item>
-		<item name="android:textSize">13sp</item>
-		<item name="android:textStyle">bold</item>
-	</style>
-
-	<style name="TextWhiteNormSize2">
-		<item name="android:textColor">@color/text_white</item>
-		<item name="android:textSize">13sp</item>
-		<item name="android:textStyle">normal</item>
-	</style>
-
-	<style name="TextYellowNormSize2">
-		<item name="android:textColor">@color/text_yellow</item>
-		<item name="android:textSize">13sp</item>
-		<item name="android:textStyle">normal</item>
-	</style>
-
-	<style name="TextWhiteBoldSize2">
-		<item name="android:textColor">@color/text_white</item>
-		<item name="android:textSize">13sp</item>
-		<item name="android:textStyle">bold</item>
-	</style>
-
-	<style name="TextGreenNormSize2">
-		<item name="android:textColor">@color/text_green</item>
-		<item name="android:textSize">13sp</item>
-		<item name="android:textStyle">normal</item>
-	</style>
-
-	<style name="TextGreenBoldSize2">
-		<item name="android:textColor">@color/text_green</item>
-		<item name="android:textSize">13sp</item>
-		<item name="android:textStyle">bold</item>
-	</style>
-
-	<!-- Text Size 3 -->
-
-	<style name="TextSize3">
-		<item name="android:textSize">14sp</item>
-	</style>
-
-	<style name="TextBoldSize3">
-		<item name="android:textSize">14sp</item>
-		<item name="android:textStyle">bold</item>
-	</style>
-
-	<style name="TextBlackNormSize3">
-		<item name="android:textColor">@color/text_black</item>
-		<item name="android:textSize">14sp</item>
-		<item name="android:textStyle">normal</item>
-	</style>
-
-	<style name="TextBlackBoldSize3">
-		<item name="android:textColor">@color/text_black</item>
-		<item name="android:textSize">14sp</item>
-		<item name="android:textStyle">bold</item>
-	</style>
-
-	<style name="TextWhiteNormSize3">
-		<item name="android:textColor">@color/text_white</item>
-		<item name="android:textSize">14sp</item>
-		<item name="android:textStyle">normal</item>
-	</style>
-
-	<style name="TextWhiteBoldSize3">
-		<item name="android:textColor">@color/text_white</item>
-		<item name="android:textSize">14sp</item>
-		<item name="android:textStyle">bold</item>
-	</style>
-
-	<style name="TextGreenNormSize3">
-		<item name="android:textColor">@color/text_green</item>
-		<item name="android:textSize">14sp</item>
-		<item name="android:textStyle">normal</item>
-	</style>
-
-	<style name="TextGreenBoldSize3">
-		<item name="android:textColor">@color/text_green</item>
-		<item name="android:textSize">14sp</item>
-		<item name="android:textStyle">bold</item>
-	</style>
-
-	<!-- Text Size 4 -->
-
-	<style name="TextSize4">
-		<item name="android:textSize">15sp</item>
-	</style>
-
-	<style name="TextNormSize4">
-		<item name="android:textSize">15sp</item>
-		<item name="android:textStyle">normal</item>
-	</style>
-
-	<style name="TextBoldSize4">
-		<item name="android:textSize">15sp</item>
-		<item name="android:textStyle">bold</item>
-	</style>
-
-	<style name="TextBlackNormSize4">
-		<item name="android:textColor">@color/text_black</item>
-		<item name="android:textSize">15sp</item>
-		<item name="android:textStyle">normal</item>
-	</style>
-
-	<style name="TextBlackBoldSize4">
-		<item name="android:textColor">@color/text_black</item>
-		<item name="android:textSize">15sp</item>
-		<item name="android:textStyle">bold</item>
-	</style>
-
-	<style name="TextWhiteNormSize4">
-		<item name="android:textColor">@color/text_white</item>
-		<item name="android:textSize">15sp</item>
-		<item name="android:textStyle">normal</item>
-	</style>
-
-	<style name="TextWhiteBoldSize4">
-		<item name="android:textColor">@color/text_white</item>
-		<item name="android:textSize">15sp</item>
-		<item name="android:textStyle">bold</item>
-	</style>
-
-	<style name="TextGreenNormSize4">
-		<item name="android:textColor">@color/text_green</item>
-		<item name="android:textSize">15sp</item>
-		<item name="android:textStyle">normal</item>
-	</style>
-
-	<style name="TextGreenBoldSize4">
-		<item name="android:textColor">@color/text_green</item>
-		<item name="android:textSize">15sp</item>
-		<item name="android:textStyle">bold</item>
-	</style>
-
-	<!-- Standard Fonts (Small) -->
-
-	<style name="TextSmallHeading" parent="TextWhiteNormSize1">
-	</style>
-
-	<style name="TextSmallButton" parent="ButtonTextBlackBoldSize1">
-	</style>
-
-	<style name="TextSmallLabel" parent="TextBlackNormSize1">
-	</style>
-
-	<style name="TextSmall" parent="TextBlackNormSize1">
-	</style>
-
-	<!-- Standard Fonts (Medium) -->
-
-	<style name="TextMediumHeading" parent="TextWhiteBoldSize2">
-	</style>
-
-	<style name="TextMediumHeadingAlt" parent="TextGreenBoldSize2">
-	</style>
-
-	<style name="TextMediumButton" parent="ButtonTextBlackBoldSize2">
-	</style>
-
-	<style name="TextMediumLabel" parent="TextWhiteNormSize2">
-	</style>
-
-	<style name="TextMediumCheckBox" parent="TextWhiteNormSize2">
-	</style>
-
-	<style name="TextMediumRadioButton" parent="TextWhiteNormSize2">
-	</style>
-
-	<style name="TextMediumSpinnerItem" parent="TextBlackBoldSize2">
-	</style>
-
-	<style name="TextMedium" parent="TextWhiteNormSize2">
-	</style>
-
-	<!-- Standard Fonts (Large) -->
-
-	<style name="TextLargeHeading" parent="TextWhiteBoldSize3">
-	</style>
-
-	<style name="TextLargeHeadingAlt" parent="TextGreenBoldSize3">
-	</style>
-
-	<style name="TextLargeButton" parent="ButtonTextBlackBoldSize3">
-	</style>
-
-	<style name="TextLargeEditText" parent="TextBlackBoldSize3">
-	</style>
-
-	<style name="TextLargeSpinnerItem" parent="TextBlackBoldSize3">
-	</style>
-
-	<!-- Standard Fonts (Extra Large) -->
-
-	<style name="TextExtraLargeHeading" parent="TextWhiteBoldSize4">
-	</style>
-
-	<style name="TextExtraLargeHeadingAlt" parent="TextGreenBoldSize4">
-	</style>
-
-	<style name="TextExtraLargeListItem" parent="TextNormSize4">
 		<item name="android:textColor">@color/sel_text_list_item</item>
-	</style>
-
-	<style name="TextExtraLargeSpinnerItem" parent="TextBlackBoldSize4">
 	</style>
 
 </resources>
