--- a/app/src/main/res/layout-land/topper.xml
+++ b/app/src/main/res/layout-land/topper.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+>
     <TextView
         android:id="@+id/action_store"
         style="@style/TopperStyle"
@@ -10,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Your store is Kendall Square"
+        android:padding="4dp"
         android:background="#ffcccc"/>
     <TextView
         android:id="@+id/action_rewards"
@@ -18,5 +20,6 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="You have $75 in rewards!"
+        android:padding="4dp"
         android:background="#ffffcc"/>
 </LinearLayout>
