--- a/app/src/main/res/layout-port/topper.xml
+++ b/app/src/main/res/layout-port/topper.xml
@@ -2,13 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+>
     <TextView
         android:id="@+id/action_store"
         style="@style/TopperStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Your store is Kendall Square"
+        android:padding="4dp"
         android:background="#ffcccc"/>
     <TextView
         android:id="@+id/action_rewards"
@@ -16,5 +18,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="You have $75 in rewards!"
+        android:padding="4dp"
         android:background="#ffffcc"/>
 </LinearLayout>
