--- a/app/src/main/res/layout/bundle_item_wide.xml
+++ b/app/src/main/res/layout/bundle_item_wide.xml
@@ -26,9 +26,8 @@
             android:id="@+id/rating"
             style="@style/SmallRatingStars"/>
         <com.staples.mobile.cfa.widget.PriceSticker
-            android:id="@+id/price"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:id="@+id/pricing"
+            style="@style/SmallPriceSticker"/>
     </LinearLayout>
 </LinearLayout>
 
