Add PagerStripe for ViewPager

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,6 +36,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:padding">4dp</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:textAllCaps">true</item>
     </style>
 
     <style name="LargeRatingStars">
@@ -61,5 +62,13 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="PagerStripe">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">6dp</item>
+        <item name="stripeThickness">3dp</item>
+        <item name="android:textSize">12sp</item>
     </style>
 </resources>
