--- a/app/src/main/res/layout/sku_summary.xml
+++ b/app/src/main/res/layout/sku_summary.xml
@@ -17,6 +17,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:padding="6dp"/>
+            <com.staples.mobile.cfa.widget.PagerStripe
+                android:id="@+id/stripe"
+                style="@style/PagerStripe"/>
             <TextView
                 android:id="@+id/title"
                 style="@style/SkuSummaryTitle"
@@ -33,7 +36,7 @@
                 style="@style/LargePriceSticker"/>
             <TextView
                 style="@style/SkuSummaryHeader"
-                android:text="@string/product_description_caps"/>
+                android:text="@string/product_description"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -42,7 +45,7 @@
                 android:text="@string/lorem_ipsum"/>
             <TextView
                 style="@style/SkuSummaryHeader"
-                android:text="@string/product_specs_caps"/>
+                android:text="@string/product_specs"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -51,7 +54,7 @@
                 android:text="@string/lorem_ipsum"/>
             <TextView
                 style="@style/SkuSummaryHeader"
-                android:text="@string/customer_reviews_caps"/>
+                android:text="@string/customer_reviews"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -63,9 +66,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
+        android:padding="6dp"
         android:gravity="center"
-        android:textSize="24dp"
+        android:textSize="20dp"
         android:background="#00ff00"
         android:text="@string/add_to_cart"/>
 </com.staples.mobile.cfa.widget.AnimatorLayout>
