--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -9,4 +9,8 @@
         <attr name="android:textSize"/>
         <attr name="android:gravity"/>
     </declare-styleable>
+    <declare-styleable name="PagerStripe">
+        <attr name="stripeThickness" format="dimension"/>
+        <attr name="android:textSize"/>
+    </declare-styleable>
 </resources>
