--- a/app/src/main/res/layout/bullet_item.xml
+++ b/app/src/main/res/layout/bullet_item.xml
@@ -4,10 +4,8 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/bullet"/>
+        style="@style/BulletMarkerStyle"/>
     <TextView
         android:id="@+id/bullet"
-        style="@style/BulletStyle"/>
+        style="@style/BulletTextStyle"/>
 </LinearLayout>
