--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -72,7 +72,16 @@
         <item name="android:textSize">12sp</item>
     </style>
 
-    <style name="BulletStyle">
+    <style name="BulletMarkerStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">top|center_horizontal</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingLeft">6dp</item>
+        <item name="android:paddingRight">4dp</item>
+        <item name="android:src">@drawable/bullet</item>
+    </style>
+    <style name="BulletTextStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:padding">2dp</item>
